# AgentMesh-Runtime

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  module-3-autonomous-loop.md  module-4-consistency-and-recovery.md  module-5-openclaw-startup-hook-integration.md  quickstart.md
docs/decisions/: 2026-06-18-claude-产品化方案.md  2026-06-18-claude-技术尽调与综合结论.md  2026-06-18-codex-commercialization-analysis.md  2026-06-19-codex-交叉评审综述.md  2026-06-21-final-direction.md  README.md
scripts/: heartbeat_systemic.py  ooda-driver.py  update_context_brief.py
site/: CNAME  index.html  llms.txt  robots.txt  sitemap.xml
site/en/: index.html
site/ja/: index.html
site/ko/: index.html
skills/context-brief/: SKILL.md
skills/heartbeat-systemic/: SKILL.md
skills/ooda-anti-patterns/: SKILL.md
skills/ooda-loop/: SKILL.md
src/: episode_ingest.py  journal_to_episode.py  unified_memory_recall.py  vector_store.py  xng.py
src/agentmesh_runtime/: autonomous_loop.py  cli.py  episode_ingest.py  neo4j_recall.py  startup_rehydrate.py  sync_backfill.py  unified_memory_recall.py  vector_store.py
src/state/: sync-ledger.jsonl
src/state/checkpoints/: ars-demo-001__0e5b5de6-9db9-40e8-9280-79af529acc18.json
tests/: test_smoke.py
