[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmesh-runtime"
version = "0.1.0"
description = "Open-source runtime scaffolding for AI agents — persistent memory, OODA loop recording, and rehydrate-on-restart, all local-first."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "AgentMesh Runtime contributors" },
]
keywords = [
    "agent",
    "agentmesh",
    "runtime",
    "memory",
    "neo4j",
    "ooda",
    "local-first",
]
dependencies = [
    "neo4j>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[project.scripts]
agentmesh-runtime = "agentmesh_runtime.cli:main"
amr = "agentmesh_runtime.cli:main"
xng = "agentmesh_runtime.cli:main"

[project.urls]
Homepage = "https://runtime.agentmesh360.com"
Repository = "https://github.com/jiyangnan/AgentMesh-Runtime"
Issues = "https://github.com/jiyangnan/AgentMesh-Runtime/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmesh_runtime"]
